<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputFurniture">

    <TextView
        android:id="@+id/namef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="15dp"
        android:text="@string/namef"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/namefurniture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/HinputF"
        android:inputType="text"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namef"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/sizef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="15dp"
        android:text="@string/size"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namefurniture" />

    <EditText
        android:id="@+id/lengthFurniture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/HinputL"
        android:inputType="text"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizef"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/widthFurniture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/HinputW"
        android:inputType="text"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lengthFurniture"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/heightFurniture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/HinputHG"
        android:inputType="text"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widthFurniture"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/fromf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/from"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <EditText
        android:id="@+id/numberVSP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:hint="@string/HnumberVSP"
        android:inputType="text"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromf"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/adressVSP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35sp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/HadressFrom"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/numberVSP"
        app:layout_constraintTop_toBottomOf="@+id/fromf"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/date"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/HinputTIn"
        android:inputType="text"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adressVSP"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/status"
        android:layout_width="256dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/commit"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/HinputC"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <Button
        android:id="@+id/inputDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:text="@string/input_furniture"
        android:textSize="25dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commit" />

    <ImageView
        android:id="@+id/photoF"
        android:layout_width="176dp"
        android:layout_height="266dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/namef"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_background" />

    <Button
        android:id="@+id/inputPhoto"
        android:layout_width="167dp"
        android:layout_height="42dp"
        android:onClick="onClickImportPhoto"
        android:text="@string/inputPhoto"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/heightFurniture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoF" />

    <Spinner
        android:id="@+id/city"
        android:layout_width="211dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:entries="@array/cklad"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightFurniture" />

</androidx.constraintlayout.widget.ConstraintLayout>
