<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_report"
    tools:context=".List_Meny2">

    <Button
        android:id="@+id/report_forDel"
        android:layout_width="310sp"
        android:layout_height="60sp"
        android:layout_marginTop="100dp"
        android:onClick="toGoReportForDell"
        android:text="@string/report_forDel"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/report_GivenAvay"
        android:layout_width="310sp"
        android:layout_height="80sp"
        android:layout_marginTop="60dp"
        android:onClick="toGoReportGivenAway"
        android:text="@string/report_GivenAvay"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_forDel" />

    <Button
        android:id="@+id/report_Sales"
        android:layout_width="310sp"
        android:layout_height="60sp"
        android:layout_marginTop="60dp"
        android:onClick="toGoReportSales"
        android:text="@string/report_Sales"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_GivenAvay" />

    <Button
        android:id="@+id/report_Moved"
        android:layout_width="310sp"
        android:layout_height="60sp"
        android:layout_marginTop="60dp"
        android:onClick="toGoReportMoved"
        android:text="@string/report_Moved"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_Sales" />

    <Button
        android:id="@+id/goMainFromMeny2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:onClick="toGoMainActivityFromList2"
        android:text="@string/goMainActiv"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>