<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_sklad"
    tools:context=".List_Meny1">

    <Button
        android:id="@+id/input_furniture"
        android:layout_width="290sp"
        android:layout_height="60sp"
        android:layout_marginTop="160dp"
        android:onClick="toGoInputFurniture"
        android:text="@string/input_furniture"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/del_furniture"
        android:layout_width="290sp"
        android:layout_height="60sp"
        android:layout_marginTop="70dp"
        android:onClick="toGoDellitFurniture"
        android:text="@string/del_furniture"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_EO" />

    <Button
        android:id="@+id/input_EO"
        android:layout_width="290sp"
        android:layout_height="60sp"
        android:layout_marginTop="70dp"
        android:onClick="toGoAddEO"
        android:text="@string/input_EO"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_furniture" />

    <Button
        android:id="@+id/goMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:onClick="toGoMainActivityFromListMeny1"
        android:text="@string/goMainActiv"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>