<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_first_new"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="280sp"
        android:layout_height="55sp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/montserrat_medium"
        android:onClick="toGoMenySclad"
        android:text="@string/button1"
        android:textColorLink="@color/green_mainColorsButton"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="280sp"
        android:layout_height="55sp"
        android:layout_marginTop="2sp"
        android:fontFamily="@font/montserrat_medium"
        android:onClick="toGoMenyReport"
        android:text="@string/button2"
        android:textColorLink="@color/green_mainColorsButton"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="toGoExit"
        android:text="@string/exit"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>